--- a/styles/main.css
+++ b/styles/main.css
@@ -34,7 +34,7 @@ h1 {
 }
 
 h2 {
-    border-bottom: 0.1em solid #66D7D1;
+    border-bottom: 0.1em solid #2d6461;
     padding: 0.25em;
     margin: 1.6em 0;
     text-shadow: 0.05em 0.05em 0.1em darkblue;
