--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,7 @@ h1 {
 
 h2 {
     font-style: italic;
-    border-bottom: 0.1em solid #306462;
+    border-bottom: 0.1em solid #1c1e1e;
     padding: 0.5em;
     margin: 1.6em 0;
 }
